--- a/src/app/dashboards/components/dashboard-card-layout/dashboard-card-layout.component.scss
+++ b/src/app/dashboards/components/dashboard-card-layout/dashboard-card-layout.component.scss
@@ -12,6 +12,7 @@
     border: 1px #CDD4E0 solid;
     display: flex;
     flex-direction: column;
+    
 }
 ::ng-deep .dashboard-card-title-subtitle {
     display: flex;
@@ -19,7 +20,7 @@
 }
 ::ng-deep .dashboard-card-header {
     padding: 20px;
-    max-height: 60px;
+    height: 60px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -30,7 +31,7 @@
 }
 ::ng-deep .dashboard-card-info {
     padding: 20px;
-    max-height: 60px;
+    height: 60px;
     display: flex;
     flex-direction: row;
     gap: 20px;
