#FMS-28: Daily Availability Card Added, Done

--- a/src/app/charts/components/chart/chart.component.html
+++ b/src/app/charts/components/chart/chart.component.html
@@ -1,9 +1,8 @@
-<div class="chart-area">
+<div class="chart-area" [ngStyle]="{'height': chartHeightPercent() + '%'}">
     @if (loading()) {
         <app-simple-loader></app-simple-loader>
     }
     <canvas
-        class="chart-canvas"
         baseChart 
         [data]="chartData()"
         [type]="chartType()"
