--- a/src/app/dashboards/components/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/dashboards/components/dashboard-layout/dashboard-layout.component.html
@@ -22,8 +22,7 @@
             <app-fuel-availability-chart-report></app-fuel-availability-chart-report>
     </mat-grid-tile>
     <mat-grid-tile>
-        <app-dashboard-card-layout>
-        </app-dashboard-card-layout>
+       <app-daily-fuel-availability-card [dateFilter]="dateFilter()"></app-daily-fuel-availability-card>
     </mat-grid-tile>
     <mat-grid-tile>
         <app-dashboard-card-layout>
