--- a/src/app/loaders/simple-loader/simple-loader.component.scss
+++ b/src/app/loaders/simple-loader/simple-loader.component.scss
@@ -1,12 +1,13 @@
 .loader-container {
     width:100%;
     height: 100%;
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 2;
-    opacity: 0.5;
+    background-color: rgba($color: #fff, $alpha: 0.7);
 }
 .loader {
     opacity: 1;
