--- a/src/app/dashboards/components/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/dashboards/components/dashboard-layout/dashboard-layout.component.html
@@ -18,11 +18,20 @@
     </div>
 </div>
 <mat-grid-list rowHeight="200" [cols]="cols()" gutterSize="20">
-    <mat-grid-tile rowspan="2" [colspan]="3">
-            <app-fuel-availability-chart-report></app-fuel-availability-chart-report>
+    <mat-grid-tile rowspan="2" [colspan]="2">
+        @defer (on viewport) {
+            <app-fuel-availability-chart-report/>
+        } @placeholder { 
+            <div>Loading Component</div>
+        }
+            
     </mat-grid-tile>
     <mat-grid-tile>
-       <app-daily-fuel-availability-card [dateFilter]="dateFilter()"></app-daily-fuel-availability-card>
+        @defer(on viewport) {
+            <app-daily-fuel-availability-card [dateFilter]="dateFilter()"/>
+        } @placeholder {
+            <div>Loading Component</div>
+        }
     </mat-grid-tile>
     <mat-grid-tile>
         <app-dashboard-card-layout>
