#FMS-29: Done with datatable and other needed components

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -24,8 +24,8 @@
 </div>
 
 <mat-menu #reportMenu>
-    <div class="menu-item" routerLink="report1" routerLinkActive="selected" mat-menu-item>
+    <div class="menu-item" routerLink="/reports/alarm-report" routerLinkActive="selected" mat-menu-item>
         <mat-icon>table</mat-icon>
-        Report01
+        Alarm Report
     </div>
 </mat-menu>
