--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -28,4 +28,8 @@
         <mat-icon>table</mat-icon>
         Alarm Report
     </div>
+    <div class="menu-item" routerLink="/reports/tank-report" routerLinkActive="selected" mat-menu-item>
+        <mat-icon>table</mat-icon>
+        Tank Measurement Report
+    </div>
 </mat-menu>
