Ready to proceed Mhd Ismail

--- a/src/app/dashboards/components/cards/fuel-availability-chart-report/fuel-availability-chart-report.component.html
+++ b/src/app/dashboards/components/cards/fuel-availability-chart-report/fuel-availability-chart-report.component.html
@@ -43,6 +43,7 @@
             [chartType]="'bar'"
             [loading]="loadingChart()"
             [chartHeightPercent]="99"
+            [stacked]="true"
             (clickedChartObjectChange)="pushParameter($event)">
             </app-chart>
         </div>
