--- a/src/app/dashboards/components/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/dashboards/components/dashboard-layout/dashboard-layout.component.html
@@ -40,4 +40,11 @@
             <div>Loading Component</div>
         }
     </mat-grid-tile>
+    <mat-grid-tile colspan="2" rowspan="2">
+        @defer(on viewport) {
+            <app-daily-leackage-card [dateFilter]="dateFilter()"/>
+        } @placeholder {
+            <div>Loading Component</div>
+        }
+    </mat-grid-tile>
 </mat-grid-list>
