--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -32,4 +32,8 @@
         <mat-icon>table</mat-icon>
         Tank Measurement Report
     </div>
+    <div class="menu-item" routerLink="/reports/transaction-report" routerLinkActive="selected" mat-menu-item>
+        <mat-icon>table</mat-icon>
+        Fuel Transaction Report
+    </div>
 </mat-menu>
