--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -39,6 +39,10 @@
 .main-toolbar-title {
     font-weight: 600;
     color: #370ddb;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 .header-options {
     display: flex;
